--- a/OEP-11/OEP-11.mediawiki
+++ b/OEP-11/OEP-11.mediawiki
@@ -96,6 +96,8 @@ response message
 
 ==== Get Account or Identity====
 
+Get Account or Identity from Provider
+
 <pre>
 {
 	"action": "getAccount",
