--- a/OEP-11/OEP-11.mediawiki
+++ b/OEP-11/OEP-11.mediawiki
@@ -172,7 +172,23 @@ request example:
 
 </pre>
 
-response:
+post to callback:
+
+<pre>
+{
+	"action": "login",
+	"version": "v1.0.0",
+	"params": {
+		"type": "ontid or account",
+		"user": "did:ont:AUr5QUfeBADq6BMY6Tp5yuMsUNGpsD7nLZ",
+		"message": "HgigFdfwf",
+		"publicKey": "",
+		"signature": ""
+	}
+}
+</pre>
+
+response from callback:
 
 <pre>
 {
@@ -180,13 +196,7 @@ response:
 	"version": "v1.0.0",
 	"error": 0,
 	"desc": "SUCCESS",
-	"result": {
-		"type": "ontid or account",
-		"user": "did:ont:AUr5QUfeBADq6BMY6Tp5yuMsUNGpsD7nLZ",
-		"message": "HgigFdfwf",
-		"publicKey": "",
-		"signature": ""
-	}
+	"result": true
 }
 </pre>
 
