--- a/OEP-11/OEP-11.mediawiki
+++ b/OEP-11/OEP-11.mediawiki
@@ -568,7 +568,7 @@ response:
 }
 </pre>
 
-===Invoke code example===
+===Provider code example===
 
 Android: [[GameWebActivity.java]]
 Ios:  [[DAppViewController.m]]
